--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -37,7 +37,7 @@
 .ipx-first-child-heading{
     color: #030303;
     font-size: 42px;
-    margin-bottom: 50px;
+    margin-top: 50px;
     line-height: 40px;
     font-weight: 500;
 }
@@ -57,7 +57,10 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     border-radius: 10px;
 }
 .ipx-country-card img{
-    width: 100%;
+    display: flex;
+    margin: 20px auto;
+    width: 64px;
+    height: 64px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -214,7 +217,16 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     h1.ipx-first-child-heading {
         margin-bottom: 20px;
     }
+    .ipx-card-description {
+        padding: 1rem;
+    }
+    .ipx-country-card img {
+        margin: 0 auto;
+    }
     .ipx-pixels-section {
         margin-top: 70px;
+    }
+    .ipx-first-child-heading{
+        margin-top: 10px;
     }
 }
