--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -2,42 +2,34 @@
 .ipx-hero{
 	justify-content: center;
     height: 100vh;
-	justify-content: center;
 	display: flex;
-    background-repeat: no-repeat,no-repeat;
+    background-repeat:no-repeat;
     align-items: start;
-    background-position: center 26%,center;
-    background-size: 65%, cover;
+    background-position: center;
+    background-size: cover;
 }
 .ipx-hero-child{
     width: min(100%,1280px);
-	min-height: 200px;
-	background: white;
+    min-height: 200px;
+    background: white;
     border-radius: 10px;
-	position: absolute;
-	bottom: -35%;
-	z-index: 9;
-    margin: 0px auto;
-	padding: 2rem 3rem;
-	display: flex;
+    margin: -150px auto 0 auto;
+    padding: 1.8rem 2.5rem;
+    display: flex;
     box-shadow: 0 5px 20px #ccc;
-	justify-content: space-around;
-	column-gap: 1rem;
+    justify-content: space-around;
+    column-gap: 0.5rem;
 }
 .darood-text{
     margin-top: 120px;
 }
 .ipx-hero-child > div {
-    width: calc(100%/4);
+    width: calc(100%/6);
 }
-.ipx-hero-child-first-child{
-    padding: 15px 30px;
-}
-.ipx-light-text{color: #ABABAB;font-size: 25px;margin-bottom: 10px;}
+.ipx-light-text{color: #ABABAB;margin-top: 45px;font-size: 25px;margin-bottom: 10px;}
 .ipx-first-child-heading{
     color: #030303;
     font-size: 42px;
-    margin-top: 50px;
     line-height: 40px;
     font-weight: 500;
 }
@@ -56,28 +48,28 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     box-shadow: 0 0 10px #ccc;
     border-radius: 10px;
 }
-.ipx-country-card img{
-    display: flex;
-    margin: 20px auto;
-    width: 64px;
-    height: 64px;
+.flagImage {
+    height: 120px;
+    width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    background-size: cover;
+    background-position: center;
 }
 .ipx-card-description{
-    padding: 2rem;
+    padding: 1rem;
 }
 .ipx-card-flag-name{
     color: #5D7F8B;
-    font-size: 28px;
+    font-size: 24px;
 }
 .ipx-card-count{
     color: #BFBFBF;
-    font-size: 18px;
+    font-size: 11px;
     margin-top: 10px;
 }
 .btn-block{display: block;width: 100%;}
-.ipx-pixels-section{ width: min(90%,1180px); margin:0 auto; margin-top: 200px;margin-bottom: 50px;}
+.ipx-pixels-section{ width: min(90%,1180px); margin:0 auto; margin-top: 50px;margin-bottom: 50px;}
 .ipx-pixel-container{
     border: 1px dotted #acacac;
     padding: 5px;
@@ -118,17 +110,32 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     width: min(80%,620px);
     background: white;
     color: white;
+    border-radius: 10px;
 }
 .ipx-modal-header{
     background: linear-gradient( to bottom,#8DD9C0,#19A2A5 );
     display: flex;
     flex-direction: column;
     padding: 10px 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .ipx-modal-header > div {
     text-align: center;
     margin: 10px 0;
 }
+div#ipx-darud-timer {
+    display: none;
+    color: black;
+    text-align: center;
+}
+.ipx-modal-darud {
+    font-size: 24px;
+    width: min(90%,540px);
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
 .ipx-profile-img {
     border-radius: 50%;
     margin: 0 auto;
@@ -156,6 +163,9 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     outline: 0;
     cursor: pointer;
 }
+.ipx-social-login-area button:disabled {
+    background: lightgrey;
+}
 .ipx-login-facebook{
     background: linear-gradient(to left,#216ED9,#355BA6);
 }
@@ -173,7 +183,7 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
 #ipx-profile-modal .close {
     color: white;
     position: absolute;
-    left: 20px;
+    right: 20px;
     top: 20px;
     font-size: 28px;
     line-height: 15px;
@@ -188,21 +198,27 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
 }
 
 @media only screen and (max-width: 767px){
+    .flagImage {
+        height: 150px;
+    }
     img.darood-text {
         width: 100%;
         padding: 10px;
     }
+    #ipx-profile-modal .close {
+        top: 0px;
+        right: 3px;
+    }
+    .ipx-modal-darud {
+        font-size: 20px;
+    }
     .ipx-hero {
-        height: auto;
-        background-size: 90%, 240%;
-        background-position: center 7%,center 0%;
+        height: 600px;
+        background-size: 240%;
+        background-position: center 0%;
     }
     .ipx-hero-child {
-        padding: 2rem;
         flex-direction: column;
-        position: relative;
-        top: 15px;
-        margin-top: 50vh;
     }
     .ipx-hero-child > div {
         width: 100%;
@@ -216,6 +232,10 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     }
     h1.ipx-first-child-heading {
         margin-bottom: 20px;
+        margin-top: 10px;
+    }
+    p.ipx-light-text {
+        margin-top: 10px;
     }
     .ipx-card-description {
         padding: 1rem;
@@ -225,8 +245,5 @@ button.ipx-btn:hover{background: linear-gradient( to left,#8DD9C0,#19A2A5 ); }
     }
     .ipx-pixels-section {
         margin-top: 70px;
-    }
-    .ipx-first-child-heading{
-        margin-top: 10px;
     }
 }
