--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,4 +55,8 @@ header{
         padding: 0px 10px;
         margin: 5px 10px;
     }
+    .ipx-main-nav > a {
+        padding: 5px 5px;
+        font-size: 14px;
+    }
 }
