--- a/public/pixelFlag/flags.css
+++ b/public/pixelFlag/flags.css
@@ -271,7 +271,7 @@ For complete information visit: www.freakflagsprite.com
 .fflag-IT.ff-app,
 .fflag-RO.ff-app {background-size:100%  50000%}
 
-.fflag.ff-sm {width: 18px;height: 11px}
+/* .fflag.ff-sm {width: 18px;height: 11px} */
 .fflag.ff-md {width: 27px;height: 17px}
 .fflag.ff-lg {width: 42px;height: 27px}
 .fflag.ff-xl {width: 60px;height: 37px}
@@ -292,7 +292,7 @@ For complete information visit: www.freakflagsprite.com
 	left: 0;
 	background: radial-gradient(circle at center -166%, rgba(255,255,255,.0) 0%, rgba(255,255,255,.0) 66%, rgba(255,255,255,.5) 80%, rgba(255,255,255,0) 80.5%, rgba(0,0,0,.02) 81%, rgba(0,0,0,.2) 100%);
 }
-.ff-app.ff-sm:before, .ff-app.ff-sm {width: 12px; height: 12px}
+/* .ff-app.ff-sm:before, .ff-app.ff-sm {width: 12px; height: 12px} */
 .ff-app.ff-md:before, .ff-app.ff-md {width: 18px; height: 18px}
 .ff-app.ff-lg:before, .ff-app.ff-lg {width: 24px; height: 24px}
 .ff-app.ff-xl:before, .ff-app.ff-xl {width: 32px; height: 32px}
