--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+*{outline:0;}
 header{
     background: white;
     box-shadow: 0 5px 10px #ccc;
@@ -38,8 +39,21 @@ header{
     margin: 30px auto;
     width: min(100%, 1168px);
     padding: 15px;
-    background: #b2e9b3;
+    color: #307c32;
+    background: #ccf3cd;
     border-radius: 10px;
+}
+.ipx-server-response-msg.ipx-error {
+    color: #bd442f;
+    background: #e9b1aa;
+}
+
+.ipx-heading{
+    font-weight: 300;
+    font-size: 42px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 50px 0;
 }
 
 @media screen and (max-width: 767px){
@@ -65,5 +79,9 @@ header{
     .ipx-main-nav > a {
         padding: 5px 5px;
         font-size: 14px;
+    }
+    .ipx-heading{
+        margin: 20px 0;
+        font-size: 36px;
     }
 }
