--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,8 +31,13 @@ header{
     display: flex;
     justify-content: space-between;
 }
+.adsection {
+    width: 100%;
+    max-width: 800px;
+    margin-top: 20px;
+}
 .ipx-footer-widget{color: white;}
-.ipx-footer-nav{display:flex;justify-content: space-between;margin-top: 7px;}
+.ipx-footer-nav{display:flex;justify-content: center;margin-top: 7px;}
 .ipx-footer-nav > a { text-decoration: none;color: #9BC3C6;padding: 5px 10px; margin: 0 10px; }
 .ipx-footer-nav > a:hover {color: white;}
 .ipx-server-response-msg {
